// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table agency {
  id integer [primary key]
}

Table client {
  id integer [primary key]
}

Table contract {
  id integer [primary key]
  agency_id integer
  client_id integer
}

Ref: contract.agency_id < agency.id
Ref: contract.client_id < client.id

Table consumer {
  id integer [primary key]
}

Table con_account {
  id integer [primary key]
  contract_id integer
}

Table con_accountconsumer {
  id integer [primary key]
  consumer_id integer
  account_id integer
}

Table con_address {
  id integer [primary key]
  consumer_id integer
}

// Ref: con_account.consumer_id <> consumer.id
Ref: con_accountconsumer.consumer_id < consumer.id
Ref: con_accountconsumer.account_id < con_account.id

Ref: consumer.id > con_address.consumer_id

Ref: con_account.contract_id < contract.id
